11-ConfigMap-Secret/docker-demo-config-map.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: docker-demo
  labels:
    app: docker-demo
spec:
  selector:
    matchLabels:
      app: docker-demo
  replicas: 3
  template:
    metadata:
      labels:
        app: docker-demo
    spec:
      containers:
      - name: docker-demo
        image: dmaumenee/docker-demo:1.0
        ports:
        - containerPort: 8080
          name: docker-demo
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
        readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 2
            timeoutSeconds: 2
