11-ConfigMap-Secret/docker-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-demo-ingress
spec:
  rules:
  - host: docker-demo-ingress
    http:
      paths:
      - path: /
        backend:
          serviceName:  docker-demo-svc
          servicePort: 8080
